# gameengine

./: .gitignore  Cargo.toml  LICENSE  README.md  rewrite_mandate.md
.github/workflows/: ci.yml
benches/: kernel_hotpaths.rs  step_throughput.rs
examples/: perf_probe.rs  pong_core.rs
proofs/: README.md  claim.md  future_game_template.md  manifest.txt
proofs/verus/: core_model.rs  liveness_model.rs  session_refinement.rs
scripts/: render-proof-claim.sh  run-kani.sh  run-perf.sh  run-verification.sh  run-verus.sh
src/: buffer.rs  compact.rs  experimental_rapier.rs  game.rs  lib.rs  main.rs  math.rs  parallel.rs  physics.rs  policy.rs  rng.rs  session.rs  types.rs  verification.rs
src/builtin/: mod.rs
src/builtin/blackjack/: mod.rs  proofs.rs  tests.rs
src/builtin/platformer/: mod.rs  proofs.rs  tests.rs  world.rs
src/builtin/tictactoe/: mod.rs  proofs.rs  tests.rs
src/cli/: mod.rs
src/core/: cards.rs  env.rs  mod.rs  observe.rs  single_player.rs  stepper.rs
src/games/: blackjack.rs  mod.rs  platformer.rs  tictactoe.rs
src/proof/: liveness.rs  macros.rs  manifest.rs  mod.rs  model.rs  refinement.rs
src/registry/: mod.rs
src/render/: builtin.rs  mod.rs  pacer.rs  runtime.rs  scene.rs
tests/: validation.rs
