[package]
name = "gameengine"
version = "0.1.0"
edition = "2024"
autobins = false
license = "ISC"
description = " A formally verified, deterministic, reversible game/simulation kernel designed as the reference environment layer for Infotheory."
repository = "https://github.com/turtle261/gameengine"
homepage = "https://infotheory.tech/gameengine.html"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[features]
default = []
physics = []
builtin-games = []
parallel = ["dep:rayon"]
render = [
    "dep:bytemuck",
    "dep:glyphon",
    "dep:pollster",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
    "dep:wgpu",
    "dep:winit",
]

[dependencies]
bytemuck = { version = "1.24.0", optional = true, features = ["derive"] }
glyphon = { version = "0.10.0", optional = true }
pollster = { version = "0.4.0", optional = true }
rayon = { version = "1.11.0", optional = true }
wgpu = { version = "28.0.0", optional = true }
winit = { version = "0.30.12", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.105", optional = true }
wasm-bindgen-futures = { version = "0.4.55", optional = true }
web-sys = { version = "0.3.92", optional = true, features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
] }

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false, features = ["cargo_bench_support"] }

[[bin]]
name = "gameengine"
path = "src/main.rs"
required-features = ["builtin-games"]

[[bench]]
name = "step_throughput"
harness = false
required-features = ["builtin-games"]
